--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 <body>
     <div id="app">
-        {{ hello }}
+        <div v-if="showHello">
+            {{ hello }}
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         var vm = new Vue({
             el: '#app',
             data: {
-                hello: 'Hello Vue!'
+                hello: 'Hello Vue!',
+                showHello: true
             }
         })
     </script>
