--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="app">
-        <div v-if="showHello">
-            {{ hello }}
+        <input type="text" v-model="hello">
+        <div v-show="hello.length > 2">
+            message: {{ hello }}
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -17,8 +18,7 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                hello: 'Hello Vue!',
-                showHello: true
+                hello: 'Hello Vue!'
             }
         })
     </script>
